# aibeavers_hackathon

./: .dockerignore  .env.example  .gitignore  .npmrc  00-FINAL-demo-positionierung-build.md  02-KONZEPT-der-nacharbeits-agent.md  AI BEAVERS founder hackathon judging and scoring guide.md  CLAUDE.md  Dockerfile.web  LICENSE  README.md  architektur-fuer-jacob.md  berater-config.json  demo-rollenspiel-riester.md  demo-transcript.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  transcript-berger.json  transcript-hansen.json  transcript-kruger.json  tsconfig.json
.claude/: README.md
.claude/agents/: hackathon-pitch-architect.md  webdesigner.md
.claude/skills/hackathon-pitch-builder/: SKILL.md
.claude/skills/hackathon-pitch-builder/references/: aib_pitch_framework.md
.claude/skills/hackathon-pitch-builder/scripts/: create_pitch_deck.py  metrics.py
.claude/skills/hackathon-pitch-reviewer/: SKILL.md
.claude/skills/hackathon-pitch-reviewer/assets/: deck_summary_template.md
.claude/skills/hackathon-pitch-reviewer/references/: aib_judging_heuristics.md
.claude/skills/hackathon-pitch-reviewer/scripts/: deck_structure_scorer.py
Fördermittel/: .dockerignore  .gitignore  BUILD_PROMPT.md  README.md  fetch_data.sh  pyproject.toml
Fördermittel/docker/: .env.example  Dockerfile  docker-compose.yml
Fördermittel/eval/: __init__.py  _guard.py  gold_set.py  metrics.py  run_eval.py  smoke.py
Fördermittel/foerder/: __init__.py  berater.py  chunking.py  cleaning.py  config.py  detail_store.py  embedding.py  ingest.py  mcp_server.py  qdrant_store.py  sparse.py  taxonomy.py
Fördermittel/tests/: test_berater.py  test_chunking.py  test_cleaning.py  test_detail_store.py  test_ingest.py  test_mcp_server.py  test_metrics.py  test_qdrant_store.py  test_sparse.py  test_taxonomy.py
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/components/: DemoClient.tsx
apps/web/components/grounding/: QuoteChip.tsx  (+3 more)
apps/web/lib/: api-client.ts  beleg-jump.ts  demo-config.ts  demo-state.ts  mock-demo-data.ts  shared-import.ts  types.ts
docs/: 01-KONZEPT-das-rasiermesser.md  beratungsprotokoll-vorlage-und-demo-transkripte.md  codex-parallel-prompt.md  hackathon-prep-flow-raven-agent.md  nacharbeit-live-wiring.md  tagesbau-und-prompts.md
docs/pitch/: README.md  deck_summary.md  markt-kontrast-zahlen.md  marktzahlen.md  nacharbeits-agent-deck.pptx  pitch_data.json  pitch_script.md
docs/pitch/deck/: _verify.mjs  index.html
patches/: @iamsamuelfraga__mcp-pipedrive.patch
scripts/: deploy-web.sh  enable-live-hero.sh  mock-ui-server.mjs  sync-web-env.mjs  sync-web-env.sh  test-protocol.mjs
src/: agent.ts  berater-config.ts  config.ts  extract.ts  hitl.ts  index.ts  llm.ts  observe.ts  server.ts  telemetry.ts
src/tools/: calendar.ts  contacts.ts  email.ts  foerder.ts  index.ts  pipedrive.ts
src/types/: vcf.d.ts
web/: index.html
web/mockups/: candidate-a-design.html  candidate-b-engineering.html  candidate-c-a11y-honesty.html  nacharbeit-merged-final.html
(+40 files in other folders)
