[project]
name = "foerder"
version = "0.1.0"
description = "Agentic German funding-programme matching — hybrid dense+German-sparse retrieval over Qdrant, MCP surface"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "polars>=1.0",
    "qdrant-client>=1.12",
    "duckdb>=1.1",
    "snowballstemmer>=2.2",
    "stop-words>=2018.7.23",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "transformers>=4.44",
    "httpx>=0.27",
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.26",
]

[project.scripts]
foerder-ingest = "foerder.ingest:main"
foerder-mcp = "foerder.mcp_server:main"
foerder-berater = "foerder.berater:main"

[dependency-groups]
agent = [
    "langchain>=1.3.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "types-beautifulsoup4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foerder"]
# Plain path-based editable: add project root to sys.path via a simple .pth
# instead of hatchling's custom finder, which fails to resolve submodules
# when the project path is non-ASCII (Fördermittel).
dev-mode-dirs = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["snowballstemmer.*", "stop_words.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_openai.*",
    "langgraph.*",
    "langchain_mcp_adapters.*",
]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
